fix: implement filters on mobile view

--- a/src/app/modules/home/product-list/product-list.component.scss
+++ b/src/app/modules/home/product-list/product-list.component.scss
@@ -37,6 +37,10 @@
   color: #ff8b00 !important;
 }
 
+.cursor-pointer {
+  cursor: pointer;
+}
+
 .tag {
   font-weight: 700;
   font-size: 14px;
